[DESIGN] : 🎨 탭레이아웃 디자인 수정

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.ClearLink" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+         <item name="colorPrimary">#1866BF</item>
+
     </style>
 
     <style name="Theme.ClearLink" parent="Base.Theme.ClearLink" />
