--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewPager2"
+        app:tabRippleColor="@android:color/transparent"
+        app:tabIndicatorColor="@android:color/transparent"
         app:tabIndicatorGravity="top">
     </com.google.android.material.tabs.TabLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--
+        app:tabRippleColor="@android:color/transparent"
+        app:tabIndicatorColor="@android:color/transparent"
+-->
