--- a/app/src/main/res/layout/fragment_contact_list.xml
+++ b/app/src/main/res/layout/fragment_contact_list.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Contact fragment"
+        android:text="ContactListFragment"
         android:textSize="30dp"
         android:gravity="center"/>
 </FrameLayout>
